--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.51.0",
+    "react-nice-avatar": "^1.5.0",
     "react-query": "^3.39.3",
     "react-spinners": "^0.13.8",
     "sharp": "^0.33.2",
