--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "axios": "^1.6.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.322.0",
     "next": "14.0.4",
     "next-themes": "^0.2.1",
