--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "tailwindcss-animate": "^1.0.7",
     "ts-node": "^10.9.2",
     "uuid": "^9.0.1",
+    "vaul": "^0.9.0",
     "zustand": "^4.5.2"
   },
   "devDependencies": {
