--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-query": "^3.39.3",
     "react-spinners": "^0.13.8",
     "react-stacked-center-carousel": "^1.0.14",
+    "react-toastify": "^10.0.5",
     "sharp": "^0.33.2",
     "swiper": "^11.0.6",
     "tailwind-merge": "^2.2.1",
